[package]
name = "barbeque_client"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.13" }
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"

bytes = { version = "0.5", optional = true }
tokio = { version = "0.2", features = ["signal"], optional = true }
uuid = { version = "0.8", features = ["v4"], optional = true }

[features]
default = []
mock_server = ["bytes", "tokio", "uuid"]

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

[[example]]
name = "enqueue"

[[example]]
name = "mock_server"

[[example]]
name = "job"
