[package]
name = "barbeque_client"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

bytes = { version = "1", optional = true }
tokio = { version = "1", features = ["signal"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = []
mock_server = ["bytes", "tokio", "uuid"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[[example]]
name = "enqueue"

[[example]]
name = "mock_server"

[[example]]
name = "job"
